--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -253,8 +253,8 @@ veramente permanente, mentre riferendolo direttamente si hanno più gradi di lib
 lasco. L'ObjId di uno IOR riferisce quindi il servizio sicuramente, ma non è detto l'oggetto.
 \subsection{Gli interceptor in CORBA}
 Sono definiti come negli altri mw, ovvero è un sistema per poter definire dei componenti che devono essere attivati
-prima o dopo l'esecuzione di una determinata richiesta (per introdurre per esempio un sistema di sicurezza). Gli
-interceptor son pensati per poter lavorare a diversi livelli (applicativo, trasporto...).
+prima e/o dopo l'esecuzione di una determinata richiesta attraverso delle pre-action e post-action (per introdurre per esempio un sistema di sicurezza). Gli
+interceptor sono pensati per poter lavorare a diversi livelli (applicativo, trasporto...).
 \subsection{Estensibilità di CORBA}
 CORBA è pensato per essere facilmente estensibile. In particolare, CORBA 3 introduce l'uso di componenti, la possibilità
 di definire QoS, e un supporto anche ad Internet come ambiente di lavoro.
